--- a/views/console.ejs
+++ b/views/console.ejs
@@ -7,9 +7,9 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/css-loader/3.3.3/css-loader.css">
     <link rel="icon" sizes="any" mask href="https://www.ubereats.com/_static/3a75cefc131799064d967e4588f26eb0.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <title>
         <%= title %>
     </title>
@@ -17,14 +17,8 @@
 
 <body>
     <%- include('./include/navbar.ejs') %>
-        <div class="container mt-5">
-            <div id="Introduction">
-                <p class="display-3">首頁</p>
-                <p class="display-5">所有訂單由外送員一起送餐到宿舍</p>
-                <p class="display-5">需要提前預約</p>
-            </div>
-        </div>
-        <%- include('./include/preloader.ejs') %>
+        <div id="loader" class="loader loader-default is-active"></div>
+        <%- include('./include/user/profile.ejs') %>
 </body>
 
 </html>
