--- a/views/include/login.ejs
+++ b/views/include/login.ejs
@@ -3,9 +3,15 @@
         <div class="col-sm-6 col-md-6 animated bounceInDown">
             <div class="account-wall">
                 <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120" alt="">
-                <form class="form-signin">
-                    <input type="email" id="email" class="form-control" placeholder="電子郵件地址" required autofocus>
-                    <input type="password" id="password" class="form-control" placeholder="密碼" required>
+                <form class="form-signin" autocomplete="off">
+                    <div class="form-group">
+                        <input type="email" id="email" class="form-control" placeholder="電子郵件地址" onfocusout="checkInputFn()" required autofocus>
+                        <div class="invalid-feedback">請輸入正確的Eamil格式</div>
+                    </div>
+                    <div class="form-group">
+                        <input type="password" id="password" class="form-control" placeholder="密碼" onfocusout="checkInputFn()" required>
+                        <div class="invalid-feedback">密碼必須由8個以上的大小寫字母和數字組成</div>
+                    </div>
                     <button class="btn btn-primary btn-block" id="submit">登入</button>
                     <div class="row justify-content-around align-items-center">
                         <label class="form-check-label mt-1">
