--- a/views/include/register.ejs
+++ b/views/include/register.ejs
@@ -4,15 +4,28 @@
             <div class="account-wall">
                 <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120" alt="">
                 <form class="form-signin" autocomplete="off">
-                    <input type="text" id="name" class="form-control" placeholder="姓名" required autofocus>
-                    <input type="email" id="email" class="form-control" placeholder="電子郵件地址" required autofocus>
-                    <input type="password" id="password" class="form-control" placeholder="密碼" required>
-                    <input type="password" id="repassword" class="form-control" placeholder="確認密碼" required>
+                    <div class="form-group">
+                        <input type="text" id="name" class="form-control" placeholder="姓名" onfocusout="checkInputFn()" required autofocus>
+                        <div class="invalid-feedback">由 1~15 個字組成</div>
+                    </div>
+                    <div class="form-group">
+                        <input type="email" id="email" class="form-control" placeholder="電子郵件地址" onfocusout="checkInputFn()" required autofocus>
+                        <div class="invalid-feedback">請輸入正確的Eamil格式</div>
+                    </div>
+                    <div class="form-group">
+                        <input type="password" id="password" class="form-control" placeholder="密碼" onfocusout="checkInputFn()" required>
+                        <div class="invalid-feedback">密碼必須由8個以上的大小寫字母和數字組成</div>
+                    </div>
+                    <div class="form-group">
+                        <input type="password" id="repassword" class="form-control" placeholder="確認密碼" onfocusout="checkInputFn()" required>
+                        <div class="invalid-feedback">確認密碼錯誤</div>
+                    </div>
                     <button class="btn btn-primary btn-block" id="submit">註冊</button>
                     <div class="row justify-content-around align-items-center">
-                        <label class="form-check-label mt-1">
-                            <input type="checkbox" class="form-check-input" id="policy" value="">
-                            <h6>我同意會員規範和隱私權政策</h6>
+                        <label class="form-check-label form-group mt-1">
+                            <input type="checkbox" class="form-check-input" id="policy" value="" onfocusout="checkInputFn()" required>
+                            我同意會員規範和隱私權政策
+                            <div class="invalid-feedback">請閱讀並勾選此欄位以同意條款</div>
                         </label>
                         <a href="#" class="need-help">忘記密碼</a>
                     </div>
