--- a/views/include/login.ejs
+++ b/views/include/login.ejs
@@ -21,7 +21,7 @@
                         <a href="#" class="need-help">忘記密碼</a>
                     </div>
                 </form>
-                <a href="/templates/register" class="text-right new-account mr-4">註冊新帳號</a>
+                <a href="/admin/register" class="text-right new-account mr-4">註冊新帳號</a>
             </div>
         </div>
     </div>
