--- a/views/include/register.ejs
+++ b/views/include/register.ejs
@@ -30,7 +30,7 @@
                         <a href="#" class="need-help">忘記密碼</a>
                     </div>
                 </form>
-                <a href="/templates/login" class="text-right new-account mr-4">登入</a>
+                <a href="/admin/login" class="text-right new-account mr-4">登入</a>
             </div>
         </div>
     </div>
