--- a/views/include/verify.ejs
+++ b/views/include/verify.ejs
@@ -9,7 +9,7 @@
                     <button class="btn btn-lg btn-primary btn-block" id="submit">確認</button>
                     <a href="javascript:remail()" class="text-right">重新請求驗證碼</a>
                 </form>
-                <a href="/templates/register" class="text-right new-account mr-4">註冊新帳號</a>
+                <a href="/admin/register" class="text-right new-account mr-4">註冊新帳號</a>
             </div>
         </div>
     </div>
