email verify by token

--- a/views/include/user/profile.ejs
+++ b/views/include/user/profile.ejs
@@ -16,7 +16,7 @@
                         </div>
                         <input type="email" id="email" class="form-control" placeholder="電子郵件位址" name="email" disabled>
                         <div class="valid-feedback">已驗證</div>
-                        <div class="invalid-feedback"><a href="/auth/verify">尚未驗證</a></div>
+                        <div class="invalid-feedback"><a href="/auth/mail">尚未驗證</a></div>
                     </div>
                     <div class="input-group mb-2">
                         <div class="input-group-prepend">
