gmail sender bug fix

--- a/views/include/mail.ejs
+++ b/views/include/mail.ejs
@@ -14,9 +14,9 @@
 </div>
 <script src="/js/fetch_request/mail.js"></script>
 <script>
-    requestMail(false);
+    requestMail();
 
     function remail() {
-        requestMail(true);
+        requestMail();
     }
 </script>
