--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-    <link rel="icon" sizes="any" mask href="https://www.ubereats.com/_static/3a75cefc131799064d967e4588f26eb0.ico">
+    <link rel="icon" sizes="any" mask href="/fordon.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <title>
         <%= title %>
@@ -31,16 +31,14 @@
         <div id="demo" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="https://images.squarespace-cdn.com/content/v1/53b839afe4b07ea978436183/1608506169128-S6KYNEV61LEP5MS1UIH4/traditional-food-around-the-world-Travlinmad.jpg">
+                    <img src="/images/background.jpg">
                 </div>
             </div>
         </div>
 
         <div class="container mt-5">
             <div id="Introduction">
-                <p class="display-3">首頁</p>
-                <p class="display-5">所有訂單由外送員一起送餐到宿舍</p>
-                <p class="display-5">需要提前預約</p>
+                <p class="display-5">@專為學生打造的美食外送平台</p>
             </div>
             <div class="footer"></div>
         </div>
