--- a/views/include/navbar.ejs
+++ b/views/include/navbar.ejs
@@ -7,6 +7,7 @@
     <a class="notAuthenticated" href="/admin/login">登入</a>
     <a class="notAuthenticated" href="/admin/register">註冊</a>
     <a class="isAuthenticated" href="/auth">個人資料</a>
+    <a class="isAuthenticated" href="/auth/wall">動態牆</a>
     <a id="logout" class="isAuthenticated" href="#">登出</a>
 </div>
 
