--- a/views/include/wall.ejs
+++ b/views/include/wall.ejs
@@ -5,7 +5,7 @@
 </div>
 <template id="storeTemplate">
     <div class="card mt-3">
-        <a>
+        <a class="text-decoration-none">
             <div class="card-header">Header</div>
             <div class="card-body"><img class="img-fluid" src="/images/background.jpg"></div>
             <div class="card-footer">Footer</div>
