--- a/views/include/register.ejs
+++ b/views/include/register.ejs
@@ -21,7 +21,7 @@
                         <div class="invalid-feedback">確認密碼錯誤</div>
                     </div>
                     <button class="btn btn-primary btn-block" id="submit">註冊</button>
-                    <div class="g-signin2 mt-1" data-onsuccess="onSignIn" data-theme="dark"></div>
+                    <div class="g-signin2 mt-1" data-onsuccess="onSignIn" data-ux_mode="redirect" data-theme="dark"></div>
                     <div class="row justify-content-around align-items-center">
                         <label class="form-check-label form-group mt-1">
                             <input type="checkbox" class="form-check-input" id="policy" value="" onfocusout="checkInputFn()" required>
