--- a/views/console.ejs
+++ b/views/console.ejs
@@ -18,7 +18,7 @@
 <body>
     <%- include('./include/navbar.ejs') %>
         <div id="loader" class="loader loader-default is-active"></div>
-        <%- include('./include/user/profile.ejs') %>
+        <%- include('./include/'+part+'.ejs') %>
 </body>
 
 </html>
