--- a/views/include/shop/profile.ejs
+++ b/views/include/shop/profile.ejs
@@ -29,6 +29,7 @@
                         <input type="text" id="update" class="form-control" placeholder="上次更新" name="update" disabled>
                     </div>
                 </form>
+                <button class="btn btn-primary" onclick="addProductForm()">+</button>
             </div>
         </div>
     </div>
@@ -50,3 +51,4 @@
 </div>
 <script src="/js/fetch_request/shop/profile.js"></script>
 <script src="/js/fetch_request/shop/deleteProduct.js"></script>
+<script src="/js/fetch_request/shop/addProduct.js"></script>
