--- a/views/include/storePage.ejs
+++ b/views/include/storePage.ejs
@@ -4,7 +4,7 @@
 <template id="productTemplate">
         <div class="card col-sm-6 col-md-3 mt-3 mr-3">
             <a class="text-decoration-none">
-            <div class="card-body"><img class="img-fluid" src="/images/background.jpg"></div>
+            <img class="img-fluid" src="/images/background.jpg">
             <div class="card-footer justify-content-between">
                 <span>name</span>
                 <span>price</span>
